chore: reset pass services, controll and route
